--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
                     </div>
                 </div>
             </div>
+            <p class="lead">
+                Software developers are really cool. People like these inspire me to be one.
+            </p>
         </div>
     </section>
 </body>
