--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 </div>
             </div>
             <p class="lead">
-                Software developers are really cool. People like these inspire me to be one.
+                Software developers are really cool. People like these inspire me to be one. Thanks for reading, and here's a link to the code for this website: <a href="https://github.com/prabhav3/passion" style="color: #dc3545;">Click Me!</a>
             </p>
         </div>
     </section>
