--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </div>
                 </div>
             </div>
-            <p class="lead">
+            <p class="lead my-4">
                 Software developers are really cool. People like these inspire me to be one. Thanks for reading, and here's a link to the code for this website: <a href="https://github.com/prabhav3/passion" style="color: #dc3545;">Click Me!</a>
             </p>
         </div>
